Working on the new layout
Signed-off-by: Bo Thomsen <boh1996@gmail.com>

--- a/assets/css/dataTables.bootstrap.css
+++ b/assets/css/dataTables.bootstrap.css
@@ -20,6 +20,13 @@ div.dataTables_paginate {
 	margin: 0;
 }
 
+.dataTables_wrapper {
+	position: relative;
+	clear: both;
+	*zoom: 1;
+	width:100%;
+}
+
 table.table {
 	clear: both;
 	margin-bottom: 6px !important;
