--- a/assets/bootstrap/less/core/modals.less
+++ b/assets/bootstrap/less/core/modals.less
@@ -60,6 +60,7 @@
 .modal-body {
   overflow-y: auto;
   max-height: 400px;
+  min-height: 200px;
   padding: 15px;
 }
 // Remove bottom margin if need be
