--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,11 @@
 @charset "utf-8";
 /* CSS Document */
 
-#page {
-	margin-top:80px;
-	margin-left:40px;
-}
-
-.container{
-	width:100%;
-	position: relative;
-	right:20px;
+.page-container{
+  position: relative;
+  margin-top: 20px;
+  padding-left:20px;
+  margin-right: 20px;
 }
 
 .length_select{
@@ -20,11 +16,38 @@
    	width: 240px;
    	height: 34px;
    	overflow: hidden;
-   	/*background: url(new_arrow.png) no-repeat right #ddd;*/
 }
 
 .disabled_page{
-   /*display: none;*/
-  margin-left: -9999px;
+  /*margin-left: -9999px;
+  top:0px;
   position: absolute;
+  overflow: hidden;*/
+  position: absolute !important;
+  top: -9999px !important;
+  left: -9999px !important;
+}
+
+.fields-select{
+  margin-bottom: 10px;
+}
+
+
+@media (max-width: 767px) {
+  [class*="span"], .row-fluid [class*="span"]{
+    float:left;
+  }
+  .searh-field-row{
+    right: 0px;
+    position: absolute;
+  }
+  .row-fluid:last-child {
+    right: 0px;
+  }
+}
+
+@media (min-width: 980px) {
+  .page-container{
+    margin-top:60px;
+  }
 }
