Some layot fixes for responsive design

--- a/assets/bootstrap/less/core/responsive-767px-max.less
+++ b/assets/bootstrap/less/core/responsive-767px-max.less
@@ -119,7 +119,7 @@
   // Make all grid-sized elements block level again
   [class*="span"],
   .row-fluid [class*="span"] {
-    float: none !important;
+    float: none;
     display: block;
     width: auto;
     margin-left: 0;
