Added the add modal box and the save system for modal boxes
Also added the Bootstrap Datepicker and made an SQL dump

--- a/assets/bootstrap/less/core/bootstrap.less
+++ b/assets/bootstrap/less/core/bootstrap.less
@@ -54,3 +54,4 @@
 @import "../extra/combobox.less";
 @import "../extra/dropdowns.less";
 @import "../extra/spacing.less";
+@import "../extra/datepicker.less";
