Updates to the newest version of bootstrap
TODO:
Add the normalize.css to the front_view,
Compile the js files into bootstrap.js and bootstrap.min.js

--- a/assets/bootstrap/less/core/bootstrap.less
+++ b/assets/bootstrap/less/core/bootstrap.less
@@ -1,3 +1,14 @@
+/*!
+ * Bootstrap v2.1.0
+ *
+ * Copyright 2012 Twitter, Inc
+ * Licensed under the Apache License v2.0
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Designed and built with all the love in the world @twitter by @mdo and @fat.
+ */
+
+// CSS Reset
 @import "reset.less";
 
 // Core variables and mixins
@@ -50,8 +61,9 @@
 // Utility classes
 @import "utilities.less"; // Has to be last to override when necessary
 
-//Extra
+// Extra
 @import "../extra/combobox.less";
 @import "../extra/dropdowns.less";
 @import "../extra/spacing.less";
 @import "../extra/datepicker.less";
+@import "../extra/extra.less";
