--- a/assets/bootstrap/less/core/modals.less
+++ b/assets/bootstrap/less/core/modals.less
@@ -1,5 +1,7 @@
-// MODALS
-// ------
+//
+// Modals
+// --------------------------------------------------
+
 
 // Recalculate z-index where appropriate
 .modal-open {
@@ -54,13 +56,17 @@
   border-bottom: 1px solid #eee;
   // Close icon
   .close { margin-top: 2px; }
+  // Heading
+  h3 {
+    margin: 0;
+    line-height: 30px;
+  }
 }
 
 // Body (where all modal content resides)
 .modal-body {
   overflow-y: auto;
   max-height: 400px;
-  min-height: 200px;
   padding: 15px;
 }
 // Remove bottom margin if need be
