Fixed the fixedheader
Fixed the width problem with the FixedHeader, by moving the fixedheader
under the page show :-D

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,9 @@
   margin-bottom: 10px;
 }
 
+.dataTables_wrapper { width: 100% }
+table.display { width: 100% }
+
 #footer {
   margin-top: 60px;
 }
