--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,3 +80,7 @@ table.display { width: 100% }
   }
 }
 
+/* This fixes the small white border that was under the fixed header */
+.FixedHeader_Header {
+  background-color: white;
+}
