--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -23,3 +23,12 @@ body {
 	background:transparent url(../images/select.png) no-repeat;
 	overflow: hidden;
 }
+
+.center {
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.input-recaptcha {
+	width:172px;
+}
