--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -29,6 +29,13 @@ body {
 	margin-right: auto;
 }
 
+.center-paragraph {
+	margin-left: auto;
+	margin-right: auto;
+	width: auto;
+	height: auto;
+}
+
 .input-recaptcha {
 	width:172px;
 }
