--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,16 @@
   overflow: hidden;
 }
 
+form label {
+   font-size: 16px;
+}
+
+.settings-form {
+  width: 500px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
 .table-button {
   margin-right: 2px;
   margin-top: -6px;
