--- a/Designs/computers.css
+++ b/Designs/computers.css
@@ -18,6 +18,10 @@
 	width:auto;
 }
 
+body,html {
+	width: 100% !important;
+}
+
 .model-image {
 	height: 230px;
 	width: auto;
@@ -66,6 +70,7 @@
     -webkit-box-shadow: inset 1px 1px 0 rgba(0,0,0,.1),inset 0 -1px 0 rgba(0,0,0,.07);
     box-shadow: inset 1px 1px 0 rgba(0,0,0,.1),inset 0 -1px 0 rgba(0,0,0,.07);
     min-height: 28px;
+    height: 30%;
     padding: 100px 0 0;
 }
 ::-webkit-scrollbar-thumb:hover {
@@ -90,7 +95,7 @@
 ::-webkit-scrollbar-corner {
     background: transparent;
 }
-html::-webkit-scrollbar-track-piece {
+body::-webkit-scrollbar-track-piece {
     -moz-background-clip: border;
     -webkit-background-clip: border;
     background-clip: border-box;
@@ -99,19 +104,19 @@ html::-webkit-scrollbar-track-piece {
     -webkit-box-shadow: inset 1px 0 0 rgba(0,0,0,.14), inset -1px 0 0 rgba(0,0,0,.07);
     box-shadow: inset 1px 0 0 rgba(0,0,0,.14), inset -1px 0 0 rgba(0,0,0,.07);
 }
-html::-webkit-scrollbar-track-piece:horizontal {
+body::-webkit-scrollbar-track-piece:horizontal {
     border-width:3px 0 0;
     -moz-box-shadow: inset 0 1px 0 rgba(0,0,0,.14), inset 0 -1px 0 rgba(0,0,0,.07);
     -webkit-box-shadow: inset 0 1px 0 rgba(0,0,0,.14), inset 0 -1px 0 rgba(0,0,0,.07);
     box-shadow: inset 0 1px 0 rgba(0,0,0,.14), inset 0 -1px 0 rgba(0,0,0,.07);
 }
-html::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb {
     border-width: 1px 1px 1px 5px;
 }
-html::-webkit-scrollbar-thumb:horizontal {
+body::-webkit-scrollbar-thumb:horizontal {
     border-width: 5px 1px 1px;
 }
-html::-webkit-scrollbar-corner {
+body::-webkit-scrollbar-corner {
     -moz-background-clip: border;
     -webkit-background-clip: border;
     background-clip: border-box;
