--- a/Designs/computers.css
+++ b/Designs/computers.css
@@ -95,7 +95,7 @@ body,html {
 ::-webkit-scrollbar-corner {
     background: transparent;
 }
-body::-webkit-scrollbar-track-piece {
+html::-webkit-scrollbar-track-piece {
     -moz-background-clip: border;
     -webkit-background-clip: border;
     background-clip: border-box;
@@ -104,19 +104,19 @@ body::-webkit-scrollbar-track-piece {
     -webkit-box-shadow: inset 1px 0 0 rgba(0,0,0,.14), inset -1px 0 0 rgba(0,0,0,.07);
     box-shadow: inset 1px 0 0 rgba(0,0,0,.14), inset -1px 0 0 rgba(0,0,0,.07);
 }
-body::-webkit-scrollbar-track-piece:horizontal {
+html::-webkit-scrollbar-track-piece:horizontal {
     border-width:3px 0 0;
     -moz-box-shadow: inset 0 1px 0 rgba(0,0,0,.14), inset 0 -1px 0 rgba(0,0,0,.07);
     -webkit-box-shadow: inset 0 1px 0 rgba(0,0,0,.14), inset 0 -1px 0 rgba(0,0,0,.07);
     box-shadow: inset 0 1px 0 rgba(0,0,0,.14), inset 0 -1px 0 rgba(0,0,0,.07);
 }
-body::-webkit-scrollbar-thumb {
+html::-webkit-scrollbar-thumb {
     border-width: 1px 1px 1px 5px;
 }
-body::-webkit-scrollbar-thumb:horizontal {
+html::-webkit-scrollbar-thumb:horizontal {
     border-width: 5px 1px 1px;
 }
-body::-webkit-scrollbar-corner {
+html::-webkit-scrollbar-corner {
     -moz-background-clip: border;
     -webkit-background-clip: border;
     background-clip: border-box;
