--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,44 @@
   overflow: hidden;
 }
 
+.pull-down {
+  margin-top: 20px;
+}
+
+.description {
+  line-height: 23px;
+  text-wrap:unrestricted;
+}
+.space-right {
+  margin-right: 5px;
+}
+.space-left {
+    margin-left: 5px;
+}
+.pull-in-left {
+    margin-left: 20px;
+}
+.center {
+  margin-left: auto;
+  margin-right: auto;
+}
+.title {
+  text-align: center;
+  width:auto;
+}
+
+.object[href] {
+    cursor: pointer;
+}
+
+.model-image {
+  height: 230px;
+  width: auto;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+}
+
 form label {
    font-size: 16px;
 }
