Finishing the api and making front end improvements

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,10 @@
   overflow: hidden;
 }
 
+.disk-space-indicator {
+  width: 40%;
+}
+
 select:focus {
    outline-color: transparent !important;
 }
